# sbi_game

./: .gitmodules  readme.md  run.sh
WyvernEngine/: CMakeLists.txt
WyvernEngine/dependency/include/: stb_image.h
WyvernEngine/sbigame/: CMakeLists.txt
WyvernEngine/sbigame/source/: Entities.cpp  Entities.h  UI.cpp  UI.h  WorldManager.cpp  WorldManager.h  main.cpp
WyvernEngine/sbigame/source/components/: SegmentRef.cpp  SegmentRef.h
WyvernEngine/sbigame/source/level/: Level.cpp  Level.h
WyvernEngine/sbigame/source/scripts/: FreeMove.cpp  FreeMove.h  HammerScript.cpp  HammerScript.h  PlayerController.cpp  PlayerController.h  SwingScript.cpp  SwingScript.h
WyvernEngine/source/: Entity.cpp  Entity.h  EntityComponent.cpp  EntityComponent.h  Helper.cpp  Helper.h  Input.cpp  Input.h  Profiler.cpp  Profiler.h  ResourceManager.cpp  ResourceManager.h  Window.cpp  Window.h  World.cpp  World.h
WyvernEngine/source/components/: Camera.cpp  Camera.h  CollisionBoxGroup.cpp  CollisionBoxGroup.h  DebugRenderer.cpp  DebugRenderer.h  Material.cpp  Material.h  MeshRenderer.cpp  MeshRenderer.h  Transform.cpp  Transform.h
WyvernEngine/source/rendering/: DebugRender.cpp  DebugRender.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderingSystem.cpp  RenderingSystem.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
res/shader/: base.frag
